# papersearchmcp

./: Dockerfile  LICENSE  README.md  gitignore.txt  pyproject.toml  smithery.yaml
paper_search_mcp/: paper.py  server.py
paper_search_mcp/academic_platforms/: arxiv.py  biorxiv.py  crossref.py  google_scholar.py  iacr.py  medrxiv.py  pubmed.py  semantic.py
tests/: test.pubmed.py  test_arxiv.py  test_biorxiv.py  test_crossref.py  test_google_scholar.py  test_iacr.py  test_medrxiv.py  test_sci_hub.py  test_semantic.py  test_server.py
workflows/: publish.yml
